gcc/testsuite/g++.dg/cpp0x/nullptr36.C
// { dg-do compile { target c++11 } }

void *p = '\0';			// { dg-error "invalid conversion" }
